# caduceus

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: e2e-test-runner.md  e2e-test-writer.md
.claude/rules/: test-delegation-workflow.md
aidlc-docs/: aidlc-state.md
aidlc-docs/construction/: shared-infrastructure.md
aidlc-docs/plans/: 2026-07-02-review-remediation-plan.md  u11-agent-dashboard-execution-plan.md
aidlc-docs/reviews/: 2026-07-02-codebase-review.md
caduceus/: __init__.py  __main__.py
caduceus/agents/: __init__.py  health.py  hermes_config.py  images.py  names.py  provisioner.py  registry.py  service.py  tokens.py
caduceus/aigateway/: __init__.py  app.py  auth.py  errors_map.py  headers.py  models_augment.py  routing.py  stream.py  upstream.py
caduceus/cli/: __init__.py  app.py  client.py  render.py
caduceus/common/: __init__.py  dto.py  errors.py  logging.py  models.py  settings.py  util.py
caduceus/config/: __init__.py  agent_config.py  doctor.py  editor.py  gateway_config.py  service.py
caduceus/daemon/: __init__.py  control_api.py  dashboard_proxy.py  events.py  gateway.py  lock.py  wiring.py
caduceus/transport/: __init__.py  acp.py  base.py  chat.py  events.py  hermes_api.py  serve.py  supervisor.py
caduceus/webui/: __init__.py  serve.py
images/hermes/: Dockerfile
tests/: conftest.py  fakes.py
tests/e2e/: conftest.py  test_webui_smoke.py
tests/pbt/: test_aigateway_properties.py  test_gateway_config_pbt.py  test_registry_properties.py  test_transport_properties.py  test_u11_properties.py  (+3 more)
(+156 files in other folders)
