[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caduceus"
version = "0.1.0"
description = "Caduceus — a gateway hub + CLI for orchestrating sandboxed hermes agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2",
    "websockets>=12",  # U3 ServeTransport (hermes serve JSON-RPC/WS); lazy-imported
    "typer>=0.12",     # U4 CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "anyio>=4",
    "hypothesis>=6",
]

[project.scripts]
caduceus = "caduceus.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["caduceus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
pythonpath = ["."]

# Hypothesis seed/reproduction logging (PBT-08) is configured in tests/conftest.py via profiles.
